--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,7 +16,7 @@
       }
     ],
     "theme_color": "#FFFFFF",
-    "background_color": "#FFFFFF",
+    "background_color": "#000000",
     "start_url": "/",
     "display": "standalone",
     "orientation": "portrait"
