--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.3.1",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sw-precache-webpack-plugin": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
