--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "sw-precache-webpack-plugin": "^1.0.0"
   },
   "devDependencies": {
