--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^7.5.3",
     "next": "12.3.1",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
