--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.10",
     "framer-motion": "^7.5.3",
-    "next": "12.3.1",
+    "moment": "^2.29.4",
+    "next": "^13.0.2",
     "next-pwa": "^5.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-datetime-picker": "^4.0.1",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "sw-precache-webpack-plugin": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.0.2",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8"
   }
