--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.3.10",
+    "@supabase/supabase-js": "^2.0.5",
     "framer-motion": "^7.5.3",
     "moment": "^2.29.4",
     "next": "^13.0.2",
+    "next-images": "^1.8.4",
     "next-pwa": "^5.6.0",
+    "pocketbase": "^0.7.4",
     "react": "^18.2.0",
     "react-datetime-picker": "^4.0.1",
     "react-dom": "^18.2.0",
