--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.3.10",
+    "@next/font": "^13.0.3",
     "@supabase/supabase-js": "^2.0.5",
     "framer-motion": "^7.5.3",
     "moment": "^2.29.4",
