--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.3.10",
     "@next/font": "^13.0.3",
+    "@supabase/auth-helpers-nextjs": "^0.5.2",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.2.6",
     "@supabase/supabase-js": "^2.0.5",
     "framer-motion": "^7.5.3",
     "moment": "^2.29.4",
